fix Servo.h capitalization

--- a/E15/F22/E15_Lab4_FA22.html
+++ b/E15/F22/E15_Lab4_FA22.html
@@ -171,7 +171,7 @@ After you've confirmed the RoboLaser is in the correct position, insert the lase
     Don't leave the laser pointer in the bracket for too long or you'll run down the batteries.
 
 ```
-#include <Servo.h>   // Needed for the servo motors
+#include &lt;Servo.h&gt   // Needed for the servo motors
 #include <math.h>    // Needed for trig and other math functions  
 
 #define PANMOTOR  9    
